Centered new comments button on mobile fixes #619

--- a/static-src/scss/components/_comments.scss
+++ b/static-src/scss/components/_comments.scss
@@ -8,6 +8,10 @@
         border: 1px solid $color-grey-light;
         border-width: 1px 0;
         overflow: hidden;
+
+        @media screen and (max-width: $mobile-breakpoint) {
+            text-align: center;
+        }
     }
 
     .comments-header-heading {
@@ -19,6 +23,13 @@
 
     .comments-header-button {
         float: right;
+    }
+
+    .comments-header-heading,
+    .comments-header-button {
+        @media screen and (max-width: $mobile-breakpoint) {
+            float: none;
+        }
     }
 
     .comment {
